# Sandboxy

./: CMakeLists.txt  CNAME  Dockerfile  README.md  create_menu_bg.sh  launch-world.sh  minetest.conf.example  shell.nix
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle  version.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  sandboxy_jni.cpp
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/native/: build.gradle
backup/: tab_local.lua
builtin/: init.lua  settingtypes.txt
builtin/client/: init.lua
builtin/common/: filterlist.lua  misc_helpers.lua
builtin/fstk/: tabview.lua
builtin/game/: constants.lua  init.lua
builtin/mainmenu/: async_event.lua  dlg_config_world.lua  dlg_create_world.lua  game_theme.lua  init.lua  serverlistmgr.lua  tab_about.lua  tab_content.lua  tab_local.lua  tab_online.lua
builtin/pause_menu/: init.lua  register.lua
cmake/Modules/: GetGitDescribe.cmake  PackageConfig.cmake
doc/: client_lua_api.md  docker_server.md  sandboxy.6  sandboxyserver.6
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
misc/: net.minetest.minetest.desktop  net.minetest.minetest.metainfo.xml  net.sandboxy.sandboxy.desktop  net.sandboxy.sandboxy.metainfo.xml
po/: sandboxy.pot
src/: objdef.cpp  object_properties.cpp  porting.cpp
src/content/: content.cpp  subgames.cpp
textures/: texture_packs_here.txt
util/wireshark/: minetest.lua
(+1 files in other folders)
